test/pass/enums_and_variants/enum_class_member_by_variant.lly
enum Test[A] {
    One(A)
    Two

    define f[A](g: Test[A]) {
    }

    define h[A, B](i: Test[B]) {
    }

    define map[A, B](f: Function(A => B)):Test[B] {
        match self: {
            case One(s):
                return One(f(s))
            case Two:
                return Two
        }
    }
}

Two.f(One(Dynamic(10)))
One(10).f(One(10))
One("10").h(One(10))

One(10).map(Integer::to_s)
One(true).map{|a| a.to_i()}
